--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/sherwyco/test-package.git"
   },
+  "publishConfig": {
+  "registry":"https://npm.pkg.github.com"
+},
   "author": "",
   "license": "ISC",
   "bugs": {
